Actions
Bug #10434
closeddump: NULL pointer errors
Start date:
2019-02-22
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
NULL pointer errors:
In file included from ../../common/sys/param.h:48:0, from ../../common/io/dump.c:32: ../../common/io/dump.c: In function 'dump_attach': ../../common/sys/null.h:32:14: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../../common/io/dump.c:57:66: note: in expansion of macro 'NULL' if (ddi_create_minor_node(devi, "dump", S_IFCHR, 0, DDI_PSEUDO, NULL) == ^~~~ In file included from ../../common/io/dump.c:48:0: ../../common/sys/sunddi.h:1564:1: note: expected 'int' but argument is of type 'void *' ddi_create_minor_node(dev_info_t *dip, char *name, int spec_type, ^~~~~~~~~~~~~~~~~~~~~ cc1: all warnings being treated as errors
Updated by Electric Monk over 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 8d3c0bf06dddf77026f7ea064cfccfae818b5b0f
commit 8d3c0bf06dddf77026f7ea064cfccfae818b5b0f Author: Toomas Soome <tsoome@me.com> Date: 2019-02-25T17:28:26.000Z 10434 dump: NULL pointer errors Reviewed by: Aurélien Larcher <aurelien.larcher@gmail.com> Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Gergő Mihály Doma <domag02@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions